--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "multiplayer-game",
   "version": "1.0.0",
   "main": "index.js",
+  "type" : "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
