feat : db migration

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "multiplayer-game",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "node src/db/migrations/createSchemas.js"
   },
   "keywords": [],
   "author": "",
